# dragon-threat-types

./: Cargo.toml  README.md  output.json
src/: diagram_cell.rs  lib.rs
src/diagram_cell/: actor.rs  flow.rs  process.rs  store.rs  td_text_block.rs  trust_boundary_box.rs  trust_boundary_curve.rs
tests/: Demo Threat Model.json  parse_cells.rs  parsing.rs
tests/demo_files/: BasicModel_V2_Generic.json  BasicModel_V2_Generic_rotation.json  EmptyModel.json  Full_featured_model.json  generic_v2_with_source_target.json
